# gith_full_course

./: janken.py  main.py  practice.py  practice2.py
djangogirls/: Dockerfile
djangogirls/blog/migrations/: 0001_initial.py
djangogirls/blog/templates/blog/: base.html
djangogirls/mysite/: settings.py
docker-compose/: pyproject.toml
docker-compose/api/cruds/: task.py
docker-compose/api/routers/: task.py
docker-compose/tests/: test_main.py
study/: Take_and_Flip copy.py  Take_and_Flip.py  janken.py  test.md  three.py  yasai.py  yokin copy.py  yokin.py  yukicode.py  yukicode2.py
